--- a/project.es.ipynb
+++ b/project.es.ipynb
@@ -1019,7 +1019,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 29,
       "id": "sudden-message",
       "metadata": {},
       "outputs": [
@@ -1056,7 +1056,7 @@
       "id": "impressed-combination",
       "metadata": {},
       "source": [
-        "**TODO: Markdown**. Para escribir aquí, haz doble clic en esta celda, elimina este contenido y coloca lo que quieras escribir. Luego ejecuta la celda."
+        "**TODO: Markdown**. Son más las propiedades que tienen un precio entre 200000 y 300000"
       ]
     }
   ],
